@@ -716,7 +716,6 @@ def slice_result(result, times):
             spike_times = result['spiketimes'][key]
             spike_times = spike_times.ravel()
             amplitudes = result['amplitudes'][key]
-            amplitudes = amplitudes.ravel()
             indices = numpy.where((spike_times >= t[0]) & (spike_times <= t[1]))[0]
             sub_result['spiketimes'][key] = spike_times[indices] - t[0]
             sub_result['amplitudes'][key] = amplitudes[indices]
