@@ -4,6 +4,7 @@ Release 1.0.8
 
 * script circus-artefacts now saves everything in ms, to be consistent
 * fix a bug in the neuralynx wrapper, causing last chunk to be ignored
+* add the option, in circus-multi to export everything for phy
 
 =============
 Release 1.0.7
